--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "jade": "^1.11.0",
