--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http": "0.0.0",
     "jade": "^1.11.0",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.0.13",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "winston": "^2.4.1"
