--- a/engine/docker-compose.yml
+++ b/engine/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3'
 services:
   web:
-    image: docker-mongoapp
+    image: nodejs-container
     build: .
-    command: node telexine.js
     ports:
       - "3000:3000"
     volumes:
