--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -1,17 +1,19 @@
-FROM node
+FROM node:carbon
 
 # Create app directory
-WORKDIR /usr/src/app
+WORKDIR /home/node/app
 
 # Install app dependencies
-COPY package.json .
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+# where available (npm@5+)
+COPY package*.json ./
 
 RUN npm install
+# If you are building your code for production
+# RUN npm install --only=production
 
 # Bundle app source
 COPY . .
 
-EXPOSE 3000
-EXPOSE 27017
-
-CMD ["node", "telexine.js"]
+EXPOSE 8080
+CMD [ "npm", "start" ]
