--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.0.13",
     "path": "^0.12.7",
     "pug": "^2.0.3",
+    "sse-nodejs": "^0.1.0",
     "winston": "^2.4.1"
   }
 }
