--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "fs": "0.0.1-security",
+    "gc-stats": "^1.1.1",
     "http": "0.0.0",
     "jade": "^1.11.0",
-    "mongodb": "^3.0.5",
-    "mongoose": "^5.0.13",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.15",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "sse-nodejs": "^0.1.0",
-    "winston": "^2.4.1"
+    "winston": "^2.4.2"
   }
 }
