--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "docker-compose": "^0.4.3",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "fs": "0.0.1-security",
