--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "fs": "0.0.1-security",
+    "gc-log-parser": "^1.1.0",
     "gc-stats": "^1.1.1",
     "http": "0.0.0",
     "jade": "^1.11.0",
