--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
     "path": "^0.12.7",
+    "portfinder": "^1.0.13",
     "pug": "^2.0.3",
     "sse-nodejs": "^0.1.0",
     "winston": "^2.4.2"
