--- a/engine/package.json
+++ b/engine/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.0.5",
-    "mongoose": "^5.0.13"
+    "mongoose": "^5.0.13",
+    "mongoose-observables": "^0.2.6",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0"
   }
 }
