--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "path": "^0.12.7",
     "portfinder": "^1.0.13",
     "pug": "^2.0.3",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0",
     "sse-nodejs": "^0.1.0",
     "winston": "^2.4.2"
   }
