--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jade": "^1.11.0",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
+    "node-stopwatch": "0.0.1",
     "path": "^0.12.7",
     "portfinder": "^1.0.13",
     "pug": "^2.0.3",
