Update for Audit mode Improve UI

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "fs": "0.0.1-security",
     "gc-log-parser": "^1.1.0",
     "gc-stats": "^1.1.1",
+    "get-port": "^3.2.0",
     "http": "0.0.0",
     "jade": "^1.11.0",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
     "node-stopwatch": "0.0.1",
     "path": "^0.12.7",
-    "portfinder": "^1.0.13",
     "pug": "^2.0.3",
     "rx-dom": "^7.0.3",
     "rxjs": "^6.0.0",
