--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
     "sse-nodejs": "^0.1.0",
+    "subprocess": "^0.3.0",
     "winston": "^2.4.2"
   }
 }
